{
  "version": 4,
  "terraform_version": "0.14.3",
  "serial": 126,
  "lineage": "44c9cdde-7243-9dac-acc8-d1af8ae4cda1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00c25f7948e360133",
            "arn": "arn:aws:ec2:eu-west-1:920394549028:instance/i-0fd7f3eff350a4448",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "jenkins-role",
            "id": "i-0fd7f3eff350a4448",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "mykeypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a43196a4aafcec39",
            "private_dns": "ip-10-0-1-88.eu-west-1.compute.internal",
            "private_ip": "10.0.1.88",
            "public_dns": "ec2-34-240-107-176.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.240.107.176",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a3613741cd462162",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-078ced8ffb65d8e36",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03c613aa9a80ccc38"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.jenkins-role",
            "aws_iam_role.jenkins-role",
            "aws_key_pair.mykeypair",
            "aws_security_group.jenkins-securitygroup",
            "aws_subnet.main-public-1",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.template_cloudinit_config.cloudinit-jenkins"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:920394549028:internet-gateway/igw-04ecccd005428449b",
            "id": "igw-04ecccd005428449b",
            "owner_id": "920394549028",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-0c2cfb70844960f20"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-068cf35beca759ea2",
            "owner_id": "920394549028",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04ecccd005428449b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-0c2cfb70844960f20"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-1-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068dc557d071f378b",
            "route_table_id": "rtb-068cf35beca759ea2",
            "subnet_id": "subnet-078ced8ffb65d8e36"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-2-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0111eec72a2082b9e",
            "route_table_id": "rtb-068cf35beca759ea2",
            "subnet_id": "subnet-0baa0a63dfafa5f00"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-3-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0faf29e170d598f07",
            "route_table_id": "rtb-068cf35beca759ea2",
            "subnet_id": "subnet-0c1e0f585f48da378"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-3",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app-securitygroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:920394549028:security-group/sg-02544b96bb8e36439",
            "description": "security group that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02544b96bb8e36439",
            "ingress": [
              {
                "cidr_blocks": [
                  "66.44.22.104/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "66.44.22.104/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app-securitygroup",
            "name_prefix": "",
            "owner_id": "920394549028",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-securitygroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2cfb70844960f20"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins-securitygroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:920394549028:security-group/sg-03c613aa9a80ccc38",
            "description": "security group that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03c613aa9a80ccc38",
            "ingress": [
              {
                "cidr_blocks": [
                  "66.44.22.104/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "66.44.22.104/32"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "jenkins-securitygroup",
            "name_prefix": "",
            "owner_id": "920394549028",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jenkins-securitygroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c2cfb70844960f20"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:920394549028:subnet/subnet-077bd76393c252bf0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-077bd76393c252bf0",
            "map_public_ip_on_launch": false,
            "owner_id": "920394549028",
            "tags": {
              "Name": "main-private-1"
            },
            "vpc_id": "vpc-0c2cfb70844960f20"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:920394549028:subnet/subnet-01f2bcda8ebc36bfa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-01f2bcda8ebc36bfa",
            "map_public_ip_on_launch": false,
            "owner_id": "920394549028",
            "tags": {
              "Name": "main-private-2"
            },
            "vpc_id": "vpc-0c2cfb70844960f20"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:920394549028:subnet/subnet-0eeef4d3474b77ac7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0eeef4d3474b77ac7",
            "map_public_ip_on_launch": false,
            "owner_id": "920394549028",
            "tags": {
              "Name": "main-private-3"
            },
            "vpc_id": "vpc-0c2cfb70844960f20"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:920394549028:subnet/subnet-078ced8ffb65d8e36",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-078ced8ffb65d8e36",
            "map_public_ip_on_launch": true,
            "owner_id": "920394549028",
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-0c2cfb70844960f20"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:920394549028:subnet/subnet-0baa0a63dfafa5f00",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0baa0a63dfafa5f00",
            "map_public_ip_on_launch": true,
            "owner_id": "920394549028",
            "tags": {
              "Name": "main-public-2"
            },
            "vpc_id": "vpc-0c2cfb70844960f20"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:920394549028:subnet/subnet-0c1e0f585f48da378",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0c1e0f585f48da378",
            "map_public_ip_on_launch": true,
            "owner_id": "920394549028",
            "tags": {
              "Name": "main-public-3"
            },
            "vpc_id": "vpc-0c2cfb70844960f20"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:920394549028:vpc/vpc-0c2cfb70844960f20",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00d37dbe944b305c2",
            "default_route_table_id": "rtb-0121369e9feaabcd8",
            "default_security_group_id": "sg-01835bbfeee4143e9",
            "dhcp_options_id": "dopt-7fb53618",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0c2cfb70844960f20",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0121369e9feaabcd8",
            "owner_id": "920394549028",
            "tags": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}